cmake_minimum_required(VERSION 3.13)
file(GLOB sources "*.cpp")
foreach(source ${sources})
    get_filename_component(base "${source}" NAME_WE)
    add_executable("task-${base}" "${source}")
    set_property(TARGET "task-${base}" PROPERTY CXX_STANDARD 17)
    target_link_libraries("task-${base}" "task")
    add_test("task-${base}" "task-${base}")
endforeach()
